Fix cut off bottom axis handler

--- a/app/css/screen.styl
+++ b/app/css/screen.styl
@@ -219,6 +219,9 @@ article.viewport
     overflow hidden
     position relative
 
+    canvas
+      display block
+
   div.graph-overlay-wrapper
     height 0
     font-size .75em
